# messaging-protocol

./: .gitignore  Cargo.toml  README.md  build.ps1  demo_complete.py  simple_register_test.py  simple_test.py  test_demo.py  test_server.py
docs/: README.md
src/: client.rs  crypto.rs  server.rs  storage.rs  types.rs
